// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles class and CSS are merged 1`] = `
Object {
  "@type": "@builder.io/mitosis/component",
  "children": Array [
    Object {
      "@type": "@builder.io/mitosis/node",
      "bindings": Object {
        "css": Object {
          "code": "{
  padding: '10px'
}",
        },
      },
      "children": Array [
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      Hello! I can run in React, Vue, Solid, or Liquid!
    ",
          },
          "scope": Object {},
        },
      ],
      "meta": Object {},
      "name": "div",
      "properties": Object {
        "class": "test",
      },
      "scope": Object {},
    },
  ],
  "context": Object {
    "get": Object {},
    "set": Object {},
  },
  "exports": Object {},
  "hooks": Object {},
  "imports": Array [],
  "inputs": Array [],
  "meta": Object {},
  "name": "MyBasicComponent",
  "refs": Object {},
  "state": Object {},
  "subComponents": Array [],
}
`;

exports[`Styles class and className are merged 1`] = `
Object {
  "@type": "@builder.io/mitosis/component",
  "children": Array [
    Object {
      "@type": "@builder.io/mitosis/node",
      "bindings": Object {
        "css": Object {
          "code": "{
  padding: '10px'
}",
        },
      },
      "children": Array [
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      Hello! I can run in React, Vue, Solid, or Liquid!
    ",
          },
          "scope": Object {},
        },
      ],
      "meta": Object {},
      "name": "div",
      "properties": Object {
        "class": "test2 test",
      },
      "scope": Object {},
    },
  ],
  "context": Object {
    "get": Object {},
    "set": Object {},
  },
  "exports": Object {},
  "hooks": Object {},
  "imports": Array [],
  "inputs": Array [],
  "meta": Object {},
  "name": "MyBasicComponent",
  "refs": Object {},
  "state": Object {},
  "subComponents": Array [],
}
`;

exports[`Styles className and CSS are merged 1`] = `
Object {
  "@type": "@builder.io/mitosis/component",
  "children": Array [
    Object {
      "@type": "@builder.io/mitosis/node",
      "bindings": Object {
        "css": Object {
          "code": "{
  padding: '10px'
}",
        },
      },
      "children": Array [
        Object {
          "@type": "@builder.io/mitosis/node",
          "bindings": Object {},
          "children": Array [],
          "meta": Object {},
          "name": "div",
          "properties": Object {
            "_text": "
      Hello! I can run in React, Vue, Solid, or Liquid!
    ",
          },
          "scope": Object {},
        },
      ],
      "meta": Object {},
      "name": "div",
      "properties": Object {
        "class": "test",
      },
      "scope": Object {},
    },
  ],
  "context": Object {
    "get": Object {},
    "set": Object {},
  },
  "exports": Object {},
  "hooks": Object {},
  "imports": Array [],
  "inputs": Array [],
  "meta": Object {},
  "name": "MyBasicComponent",
  "refs": Object {},
  "state": Object {},
  "subComponents": Array [],
}
`;
